Fixed issues with spacing on meal review page

--- a/app/assets/stylesheets/meal_postings.scss
+++ b/app/assets/stylesheets/meal_postings.scss
@@ -449,4 +449,8 @@ hr.user-meal-posting-separate {
   margin-bottom: 20px;
 }
 
+.meal-rating-img-div {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 
