--- a/app/assets/stylesheets/reservations.scss
+++ b/app/assets/stylesheets/reservations.scss
@@ -15,6 +15,10 @@
   margin-bottom: 10px !important;
 }
 
+.reservation-desc-container {
+  padding-bottom: 10px;
+}
+
 .payment-btn,
 .delete-btn {
   margin-bottom: 10px;
